# kryptic-journal-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrator  README.md  docker-compose.yml  env.example  init-db.sh
k8s/: api-deployment.yaml  api-ingress.yaml  api-service.yaml  migration-job.yaml  namespace.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
migrations/: 001_create_users_table.sql  002_create_journal_entries_table.sql
scripts/: deploy-simple.sh  deploy.sh  dev.sh  setup-vps.sh
src/: main.rs
src/auth/: jwt.rs
src/db/: models.rs
src/routes/: auth.rs  journal.rs  mod.rs
src/utils/: encryption.rs
