[package]
name = "kryptic-journal-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "macros", "time"] }
uuid = { version = "1.6.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.2.0"
ring = "0.17.7"
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
time = { version = "0.3.31", features = ["serde"] }
hex = "0.4"
